--- a/Voice Pitch Analyzer/Info.plist
+++ b/Voice Pitch Analyzer/Info.plist
@@ -21,7 +21,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>duh</string>
+	<string>MicroPhoneUsage</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
