add the camera usage description key because aparently we're using that 🤷

--- a/Voice Pitch Analyzer/Info.plist
+++ b/Voice Pitch Analyzer/Info.plist
@@ -24,6 +24,8 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>MicroPhoneUsage</string>
+	<key>NSCameraUsageDescription</key>
+	<string>CameraPhoneUsage</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
